# saffron

./: .dockerignore  .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  rustfmt.toml
migrations/: 20201209002431_initial.sql
src/: commands.rs  config.rs  lib.rs  main.rs  manage.rs  webserver.rs
src/models/: files.rs  mod.rs  secret_key.rs  session.rs  users.rs
src/routes/: index.rs
src/webserver/: app.rs  mod.rs  responder.rs  responders.rs
src/webserver/routes/: auth.rs  errors.rs  index.rs  mod.rs  upload.rs
views/: index.tailwind.css  node-packages.nix  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js
views/templates/: error.html  footer.html  header.html  index.html  layout.html  login.html  not_found.html  pagination.html
