[package]
name = "fragrance"
version = "0.1.0"
authors = ["blissful <blissful@sunsetglow.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4.1"
actix-session = "0.4.0"
clap = "3.0.0-beta.2"
log = "0.4.0"
env_logger = "0.8.2"
tera = "1"
serde = "1.0.118"
futures = "0.3.8"
sqlx = { version = "0.4.0", features = ["runtime-actix-native-tls", "sqlite", "migrate"] }
dotenv = "0.15.0"
openssl = "0.10.30"
