[package]
name = "saffron"
version = "0.1.0"
authors = ["blissful <blissful@sunsetglow.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4.1"
actix-identity = "0.3.1"
actix-multipart = "0.3.0"
clap = "3.0.0-beta.2"
sqlx = { version = "0.4.0", features = ["runtime-actix-native-tls", "sqlite", "migrate"] }
tera = "1"
dotenv = "0.15.0"
openssl = "0.10.30"
sodiumoxide = "0.2.5"
hex = "0.4.2"
base64 = "0.13.0"
log = "0.4.0"
env_logger = "0.8.2"
serde = "1.0.118"
serde_json = "1.0"
futures = "0.3.8"
